Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9970

[comctl32] Toolbar Button Size Regression

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • None
    • 68,553

    Description

      In the explorer, the buttons are drawn way to wide. It seemed to have occurred right after 68553. This only affects the explorer toolbar that I can tell.

      Attachments

        1. jared-toolbar.patch
          0.6 kB
        2. toolbar.PNG
          toolbar.PNG
          27 kB
        3. toolsband.cpp.patch
          5 kB
        4. winXPSP3_1280x1024px.png
          winXPSP3_1280x1024px.png
          57 kB

        Activity

          People

            AmineKhaldi AmineKhaldi
            Pi_User5 Pi_User5
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: