[COMCTL32] Revert Wine Commit 5b7b911 as it breaks Explorer Toolbar Buttons. Update comctl32_ros.diff accordingly. CORE-9970

svn path=/trunk/; revision=69115